# slimrr

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pyrr/: __init__.py  aabb.py  aambb.py  geometric_tests.py  geometry.py  line.py  plane.py  ray.py  rectangle.py  sphere.py  trig.py  vector.py  vector2.py  vector3.py  vector4.py
pyrr/objects/: __init__.py  base.py  matrix33.py  matrix44.py  vector4.py
slimrr/: __init__.py  euler.py  matrix33.py  matrix44.py  quaternion.py  vector2.py  version.py
slimrr/objects/: base.py  quaternion.py  vector2.py  vector3.py
tests/: test_equivalence.py  test_euler.py  test_examples.py  test_integer.py  test_matrix33.py  test_matrix44.py  test_quaternion.py  test_trig.py  test_vector.py  test_vector3.py  test_vector4.py
tests/objects/: test_equivalence.py  test_examples.py  test_matrix33.py  test_matrix44.py  test_quaternion.py  test_vector3.py  test_vector4.py
